--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,12 +22,12 @@
 @import "layout/_header.scss";
 @import "layout/_footer.scss";
 @import "components/_buttons.scss";
-@import "components/_accordion.scss";
+// @import "components/_accordion.scss";
 // @import "components/_bootstrap-icons.scss";
 // @import "components/_modals.scss";
 @import "components/_title.scss";
-@import "components/magnific-popup.scss";
+// @import "components/magnific-popup.scss";
 @import "components/_hamburger.scss";
 @import "components/_nav.scss";
 @import "components/_contacts.scss";
-@import "components/_calculator.scss";
+// @import "components/_calculator.scss";
